Fixed ticket description field being too wide.
Refs django/code.djangoproject.com/#15

--- a/trac-env/htdocs/css/trachacks.scss
+++ b/trac-env/htdocs/css/trachacks.scss
@@ -41,6 +41,11 @@ div.trac-content {
   }
 }
 
+
+#field-description {
+  width: 80%;
+}
+
 #ticket {
   background-color: $white;
   border-color: $gray-line;
